--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -9,29 +9,39 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <title>{% if request.user|lower != 'anonymoususer' %}{{request.user}} - {% endif %}{% block title %}{% endblock %}
+    </title>
 </head>
 
 <body id="body">
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li style="list-style: none;" class="alert alert-{% if message.tags %}{{message.tags}}{% endif %}">{{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     {% block navbar %}
-    <nav class="navbar navbar-expand-lg d-flex justify-content-between">
-        <a class="navbar-brand text-dark" href="{% url 'blog:posts' %}">Blog</a>
+    <nav class="navbar navbar-expand-lg d-flex justify-content-between shadow-sm">
+        <a class="navbar-brand text-dark" style="font-family: title;" href="{% url 'blog:posts' %}">Blog</a>
         {% if request.user|lower != 'anonymoususer' %}
         <div>
-            <span class="mx-3">{{request.user}}</span>
-            <a class="mx-3" href="{% url 'blog:create' %}">Create Post</a><a class="mx-3"
-                href="{% url 'users:logout' %}">Logout</a></div>
-                {% else %}
-        <div><a class="btn btn-link btn-primary text-light mx-3"
-                href="{% url 'users:signup' %}">Sign Up</a><a class="mx-3"
-                href="{% url 'users:login' %}">Login</a></div>{% endif %}
+            {% if 'blog.add_post' in perms %}<a class="mx-3" href="{% url 'blog:create' %}">Create Post</a>{% endif %}
+            {% include 'blog/account.html' %}
+        </div>
+        {% else %}
+        <div><a class="btn btn-link btn-primary text-light mx-3" href="{% url 'users:signup' %}">Sign Up</a><a
+                class="mx-3" href="{% url 'users:login' %}">Login</a></div>{% endif %}
     </nav>
     {% endblock %}
-    <div role="main" class="container mt-5">
-        {% block content %}{% endblock %}
+    <div class="my-5" role="main">
+        {% block content %}
+        {% endblock %}
     </div>
     {% block footer %}
-    <footer id="footer" class="footer border-top text-dark mt-5 text-center footer-stick-bottom"
+    <footer id="footer" class="footer text-dark mt-5 text-center footer-stick-bottom"
         style="width: 100%;line-height: 50px;">
         <div class="container">
             <span>Open Source blog template free to use.</span>
@@ -41,6 +51,26 @@
         .footer-stick-bottom {
             position: absolute;
             bottom: 0;
+        }
+
+        @font-face {
+            font-family: 'title';
+            src: url(./../../../static//fonts/title-bold-italic.otf);
+        }
+
+        @font-face {
+            font-family: 'title-regular';
+            src: url(./../../../static//fonts/title-regular.otf);
+        }
+
+        .title-font-regular {
+            font-family: title-regular;
+        }
+
+        .messages {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
         }
     </style>
     <script>
@@ -54,8 +84,14 @@
         }
         window.onresize = check_footer_status
 
-        window.onload = function() {
+        window.onload = function () {
+            $('#preview').hide()
             check_footer_status()
+            if ($('.alert').length) {
+                setTimeout(() => {
+                    $('.messages').fadeOut()
+                }, 6000);
+            }
         }
     </script>
     {% endblock %}
