--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -1,19 +1,43 @@
 {% extends 'blog/index.html' %}
+{% block title %}Posts{% endblock %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        {% for post in posts %}
-        <div class="col-lg-4 col-sm-12">
-            <div class="card">
-                <img class="card-img-top" src="/media/img/{{post.img}}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">{{post.title}}</h5>
-                    <p class="card-text">"{{post.text|truncatechars:"50"}}"</p>
-                    <a href="{% url 'blog:post' post.id %}" class="btn btn-primary">See More</a>
+<div>
+    <div class="row" style="width: 100%;margin: 0;">
+        <div class="col-2" style="position: sticky;top: 10px;height: fit-content;">
+            {% include 'blog/categories.html' %}
+        </div>
+        <div class="col-lg-10 col-sm-12">
+            <div>{% include 'blog/tags.html' %}</div>
+            <div class="row">
+                {% for post in posts %}
+                <div class="col-lg-4 py-3 col-sm-12">
+                    <div class="post-card card shadow rounded" style="border: none;">
+                        <div id="post-cat" class="badge bg-dark text-light">{{post.category}}</div>
+                        <img class="card-img-top" src="/media/img/{{post.img}}" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">{{post.title}}</h5>
+                            <p class="card-text">"{{post.text|truncatewords:"20"}}"</p>
+                            <a href="{{ post.get_absolute_url }}" class="btn btn-primary">See More</a>
+                        </div>
+                    </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
-        {% endfor %}
     </div>
 </div>
+<style>
+    #post-cat{
+        position: absolute;
+        top: 10px;
+        left: 10px;
+    }
+</style>
+<script>
+    $('.post-card').hover(function(event){
+        $(this).removeClass('shadow').addClass('border')
+    }, function(event){
+        $(this).removeClass('border').addClass('shadow')
+    })
+</script>
 {% endblock %}
