added delete option for privileges

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -5,8 +5,8 @@
     <span class="h1" style="font-family: 'Times New Roman', Times, serif;">
         {{ post.title }}
     </span>
-    {% if 'blog.change_post' in perms and request.user == post.author %}
-    (<a href="{% url 'blog:edit' post.pk %}">Edit</a>)
+    {% if 'blog.change_post' in perms or request.user == post.author %}
+    (<a href="{% url 'blog:edit' post.pk %}">Edit</a>-<a href="{% url 'blog:delete' post.pk %}" class="text-danger">Delete</a>)
     {% endif %}
     <div class="d-flex justify-content-between">
         <span id="author">
