--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,13 +1,41 @@
 {% extends 'blog/index.html' %}
 {% block title %}{{post.title}}{% endblock %}
 {% block content %}
-<div class="container shadow p-5 rounded">
+{% if 'change_post' in perms %}
+<div class="container text-light">
+{% load likecounter %}
+</div>
+{% endif %}
+{% if not post.approved %}
+<div class="container" style="position: fixed;bottom: 20px;left: 50%;transform: translate(-50%, -50%);z-index: 1;padding: 0;">
+    <form action="{% url 'blog:approvepost' post.pk %}" method="post">
+        {% csrf_token %}
+        <input type="text" name="action" value="approve" hidden>
+        <button id="approve" style="width: 100%;"  class="btn btn-success">
+            APPROVE
+        </button>
+    </form>
+</div>
+{% endif %}
+<div class="container shadow p-5 rounded" style="position: relative;">
     <span class="h1" style="font-family: 'Times New Roman', Times, serif;">
         {{ post.title }}
     </span>
+    <div>
+        <button id="enable" class="badge bg-{% if post.disabled %}danger{% else %}success{% endif %} text-light">{% if post.disabled %}disabled{% else %}enabled{% endif %}</button>
+    </div>
     {% if 'blog.change_post' in perms or request.user == post.author %}
-    (<a href="{% url 'blog:edit' post.pk %}">Edit</a>-<a href="{% url 'blog:delete' post.pk %}"
-        class="text-danger">Delete</a>)
+    <span class="dropdown rounded" style="position:absolute;top:10px;right: 10px;">
+        <button class="bg-white border-0 dropdown-toggle btn-lg" type="button" id="edit-delete" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <i class="bi bi-three-dots-vertical"></i>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="edit-delete">
+            <div><a class="btn text-muted" href="{% url 'blog:edit' post.pk %}">Edit</a></div>
+            <div><a class="btn text-muted" href="{% url 'blog:delete' post.pk %}">Delete</a></div>
+        </div>
+    </span>
+
     {% endif %}
     <div class="d-flex justify-content-between">
         <span id="author">
@@ -18,6 +46,16 @@
     <img src="/media/img/{{ post.img }}" alt="" width="100%">
     <div id="text" style="font-size: 20px;">
         <p>{{ post.text }}</p>
+    </div>
+    <div class="d-flex">
+        <div class="h2 text-success p-2 m-2">
+            <span class="counter">{{ post.postlike_set.all|like_counter:True }}</span>
+            <i id="post-like" class="bi bi-hand-thumbs-up{% if post|liked_this_post:request.user == True %}-fill{% endif %}"></i>
+        </div>
+        <div class="h2 text-danger p-2 m-2">
+            <i id="post-dislike" class="bi bi-hand-thumbs-down{% if post|liked_this_post:request.user == False %}-fill{% endif %}"></i>
+            <span class="counter">{{ post.postlike_set.all|like_counter:False }}</span>
+        </div>
     </div>
     <hr>
     <div class="h1">Comments</div>
@@ -30,16 +68,14 @@
             </div>
             <div>{{ comment.text }}</div>
             <div class="d-flex">
-                <div id="likes" class="mx-2">1<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                        fill="currentColor" class="bi bi-hand-thumbs-up" viewBox="0 0 16 16">
-                        <path
-                            d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z" />
-                    </svg></div>
-                <div id="dislikes" class="color-danger mx-2">1<svg xmlns="http://www.w3.org/2000/svg" width="16"
-                        height="16" fill="currentColor" class="bi bi-hand-thumbs-down" viewBox="0 0 16 16">
-                        <path
-                            d="M8.864 15.674c-.956.24-1.843-.484-1.908-1.42-.072-1.05-.23-2.015-.428-2.59-.125-.36-.479-1.012-1.04-1.638-.557-.624-1.282-1.179-2.131-1.41C2.685 8.432 2 7.85 2 7V3c0-.845.682-1.464 1.448-1.546 1.07-.113 1.564-.415 2.068-.723l.048-.029c.272-.166.578-.349.97-.484C6.931.08 7.395 0 8 0h3.5c.937 0 1.599.478 1.934 1.064.164.287.254.607.254.913 0 .152-.023.312-.077.464.201.262.38.577.488.9.11.33.172.762.004 1.15.069.13.12.268.159.403.077.27.113.567.113.856 0 .289-.036.586-.113.856-.035.12-.08.244-.138.363.394.571.418 1.2.234 1.733-.206.592-.682 1.1-1.2 1.272-.847.283-1.803.276-2.516.211a9.877 9.877 0 0 1-.443-.05 9.364 9.364 0 0 1-.062 4.51c-.138.508-.55.848-1.012.964l-.261.065zM11.5 1H8c-.51 0-.863.068-1.14.163-.281.097-.506.229-.776.393l-.04.025c-.555.338-1.198.73-2.49.868-.333.035-.554.29-.554.55V7c0 .255.226.543.62.65 1.095.3 1.977.997 2.614 1.709.635.71 1.064 1.475 1.238 1.977.243.7.407 1.768.482 2.85.025.362.36.595.667.518l.262-.065c.16-.04.258-.144.288-.255a8.34 8.34 0 0 0-.145-4.726.5.5 0 0 1 .595-.643h.003l.014.004.058.013a8.912 8.912 0 0 0 1.036.157c.663.06 1.457.054 2.11-.163.175-.059.45-.301.57-.651.107-.308.087-.67-.266-1.021L12.793 7l.353-.354c.043-.042.105-.14.154-.315.048-.167.075-.37.075-.581 0-.211-.027-.414-.075-.581-.05-.174-.111-.273-.154-.315l-.353-.354.353-.354c.047-.047.109-.176.005-.488a2.224 2.224 0 0 0-.505-.804l-.353-.354.353-.354c.006-.005.041-.05.041-.17a.866.866 0 0 0-.121-.415C12.4 1.272 12.063 1 11.5 1z" />
-                    </svg></div>
+                <div class="h4 text-success p-2 m-2">
+                    <span class="counter">{{ comment.commentlike_set.all|like_counter:True }}</span>
+                    <i class="bi bi-hand-thumbs-up{% if comment|comment_liked:request.user == True %}-fill{% endif %} comment-like"></i>
+                </div>
+                <div class="h4 text-danger p-2 m-2">
+                    <i class="bi bi-hand-thumbs-down{% if comment|comment_liked:request.user == False %}-fill{% endif %} comment-dislike"></i>
+                    <span class="counter">{{ comment.commentlike_set.all|like_counter:False }}</span>
+                </div>
             </div>
         </div>
         {% endfor %}
@@ -52,4 +88,71 @@
     </div>
     {% endif %}
 </div>
+{% endblock %}
+{% block extra_script %}
+<script>
+    $('#post-like').click((ev) => {
+        var liked = ev.target
+        if ($(liked).hasClass('bi-hand-thumbs-up-fill')) {
+            $(liked).addClass('bi-hand-thumbs-up')
+            $(liked).removeClass('bi-hand-thumbs-up-fill')
+            $(liked).siblings('.counter').text((index, value) => {
+                return value - 1;
+            })
+        } else {
+            $(liked).addClass('bi-hand-thumbs-up-fill')
+            $(liked).removeClass('bi-hand-thumbs-up')
+            $(liked).siblings('.counter').text((index, value) => {
+                return Number(value) + 1;
+            })
+        }
+    })
+    $('#post-dislike').click((ev) => {
+        var liked = ev.target
+        if ($(liked).hasClass('bi-hand-thumbs-down-fill')) {
+            $(liked).addClass('bi-hand-thumbs-down')
+            $(liked).removeClass('bi-hand-thumbs-down-fill')
+            $(liked).siblings('.counter').text((index, value) => {
+                return value - 1;
+            })
+        } else {
+            $(liked).addClass('bi-hand-thumbs-down-fill')
+            $(liked).removeClass('bi-hand-thumbs-down')
+            $(liked).siblings('.counter').text((index, value) => {
+                return Number(value) + 1;
+            })
+        }
+    })
+    $('#enable').click(()=>{
+        $.ajax({
+            url: '{% url "blog:approvepost" post.pk %}',
+            method: 'POST',
+            mode: 'same-origin',
+            data: {
+                action: 'enable'
+            },
+            success: function (data) {
+                if (data == 'ok') {
+                    window.location.reload()
+                }
+            },
+            headers: {'X-CSRFToken': getCookie('csrftoken')}
+        })
+    })
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+</script>
 {% endblock %}
