--- a/blog/templates/blog/categories.html
+++ b/blog/templates/blog/categories.html
@@ -1,4 +1,4 @@
-<div id="categories" class="rounded border pl-3">
+<div id="categories" class="pl-3">
     <div class="h4 pt-3 title-font-regular">Categories</div>
     <div class="pl-5">
         {% for cat, cat_list in categories.items %}
