--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -15,7 +15,7 @@
                         <div id="post-cat">
                             <div class="badge bg-dark text-light">{{post.category}}</div>
                         </div>
-                        <img class="card-img-top" src="/media/img/{{post.img}}" alt="Card image cap">
+                        <img class="card-img-top" src="/media/{{post.img}}" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">{{post.title}}</h5>
                             <p class="card-text">"{{post.text|truncatewords:"20"}}"</p>
